# Renderer

./: CMakeLists.txt  Readme.md  conanfile.txt  global.hpp  main.cpp
core/: Bounds3.cpp  Bounds3.hpp  Entity.cpp  Entity.hpp  Intersection.hpp  Light.hpp  Material.cpp  Material.hpp  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Shader.hpp  Texture.cpp  Texture.hpp  Triangle.cpp  Triangle.hpp
mathlib/: CMakeLists.txt  Vector.hpp
mathlib/ispc/: AddByElements.ispc  CMakeLists.txt  CrossProduct.ispc  DotProduct.ispc  MulByElements.ispc  Normalize.ispc  SubByElements.ispc  Transform.ispc  Transpose.ispc
